--- a/posts/the-lectures/2024-02-07-statquest-w2v.qmd
+++ b/posts/the-lectures/2024-02-07-statquest-w2v.qmd
@@ -32,10 +32,10 @@ w2v의 기본 아이디어 위주로 정리해보자.
 컴퓨터는 당연히 사람의 언어를 '그대로' 알아들을 수 없다. 컴퓨터가 언어를 이해하기 위해서는 언어를 먼저 숫자로 바꿔야 한다. 이렇게 말(단어, 문장, 문단)을 숫자로 바꾸는 작업이 w2v의 거의 전부이다. 
 
 ::: {layout="[-1, 5, -1]"}
-![네 개의 단어를 숫자로 바꿔자.](./images/w2v/w2v-1.png){ style="border: 1px solid #000;" }
+![네 개의 단어를 숫자로 바꾸자.](./images/w2v/w2v-1.png){ style="border: 1px solid #000;" }
 :::
 
-중요한 것은 '어떻게' 바꾸는지에 있다. 우선 강의 슬라이드에 나온대로 "Troll 2", "is", "great", "Gymkata" 네 개의 단어를 생각해보자. 
+중요한 것은 '어떻게' 바꾸는지에 있다. 우선 강의 슬라이드에 나온 대로 "Troll 2", "is", "great", "Gymkata" 네 개의 단어를 생각해 보자.
 
 가장 쉬운 방법은 해당 단어들에 임의로 숫자를 부여하는 것이다. 이렇게 숫자를 부여하면 컴퓨터에 넣을 수는 있다. 다만 이렇게 부여된 숫자가 의미 있는 정보일까? 아니다. 인간의 언어가 지닌 '의미'를 되도록 가깝게 컴퓨터로 옮기려면 말이 지니는 관계 혹은 말 사이의 연결망까지 모두 숫자에 반영되어야 한다. 
 
