--- a/posts/the-books/2023-03-13-voltage-effect-list.qmd
+++ b/posts/the-books/2023-03-13-voltage-effect-list.qmd
@@ -3,7 +3,7 @@ title: 존 리스트, "스케일의 법칙"
 description: 그냥 또 하나의 경제학책? 
 author: "JS HUHH"
 date: "03/13/2023"
-image: "./images/book-cat-2.webp"
+image: "./images/book-cat.webp"
 categories: [the-books]
 #fig-align: center
 #jupyter: python3
