--- a/posts/the-books/2024-02-05-조선사-쩐의전쟁.qmd
+++ b/posts/the-books/2024-02-05-조선사-쩐의전쟁.qmd
@@ -3,7 +3,7 @@ title: 이한, "조선사 쩐의 전쟁"
 description: 조선은 '조선'이 아니야!
 author: "JS HUHH"
 date: "02/05/2024"
-image: "./images/book-cat-2.webp"
+image: "./images/book-cat.webp"
 categories: [the-books]
 #fig-align: center
 #jupyter: python3
