--- a/posts/machine-learning/2022-11-29-shannon-entropy.qmd
+++ b/posts/machine-learning/2022-11-29-shannon-entropy.qmd
@@ -84,7 +84,19 @@ $$
 H(p,q)=-\sum_{x \in \chi} p(x) \log q(x) 
 $$
 
-섀넌 엔트로피의 개념에 평가 값에 예측 확률을 넣었다고 보면 된다. 즉, 실제로 존재하는 확률이 $p(x)$라고 할 때 이를 예측한 값이 $q(x)$라고 하면, 위의 값은 실제 확률과 비교한 예측 확률의 성과를 나타난다. $q(x) = p(x)$일 때 $H(p,q)$는 최솟값을 지니게 된다. 
+섀넌 엔트로피의 개념에 평가 값에 예측 확률을 넣었다고 보면 된다. 즉, 실제로 존재하는 확률이 $p(x)$라고 할 때 이를 예측한 값이 $q(x)$라고 하면, 위의 값은 실제 확률과 비교한 예측 확률의 성과를 나타난다. $q(x) = p(x)$일 때 $H(p,q)$는 최솟값을 지니게 된다.
+
+크로스 엔트로피는 분류 문제를 풀 때 손실 함수로 많이 활용된다. 왜 그럴까? 흔히 활용되는 오차제곱항에 비해서 올바른 확률에서 멀리 떨어져 있을 때 기울기의 값이 훨씬 크다. 경사하강법을 쓰면 훨씬 빠르게 원하는 위치로 접근한다. 
+
+이산 분포를 가정했을 때 $\chi$를 전체 분류의 크기를 담은 첨수 집합이라고 하자. 이제 1이라는 종류만을 담은 참 값은 그림의 오른쪽과 같고, 반면 모델이 예측한 각 분류의 확률은 왼쪽이라고 하자. 이때 크로스 엔트로피는 그림 속에 표현된 값과 같다.  
+
+:::{layout="[-1,5,-1]"}
+![](https://miro.medium.com/v2/resize:fit:882/format:webp/1*rcvGMOuWLMpnNvJ3Oj7fPA.jpeg)
+:::
+
+:::{.column-margin}
+기계학습에서 관련 내용은 [여기](https://www.youtube.com/watch?v=6ArSys5qHAU)를 참고하자. 
+:::
 
 ### 로지스틱 함수의 경우 
 
