--- a/posts/machine-learning/2022-11-29-shannon-entropy.qmd
+++ b/posts/machine-learning/2022-11-29-shannon-entropy.qmd
@@ -88,14 +88,14 @@ $$
 
 크로스 엔트로피는 분류 문제를 풀 때 손실 함수로 많이 활용된다. 왜 그럴까? 흔히 활용되는 오차제곱항에 비해서 올바른 확률에서 멀리 떨어져 있을 때 기울기의 값이 훨씬 크다. 경사하강법을 쓰면 훨씬 빠르게 원하는 위치로 접근한다. 
 
-이산 분포를 가정했을 때 $\chi$를 전체 분류의 크기를 담은 첨수 집합이라고 하자. 이제 1이라는 종류만을 담은 참 값은 그림의 오른쪽과 같고, 반면 모델이 예측한 각 분류의 확률은 왼쪽이라고 하자. 이때 크로스 엔트로피는 그림 속에 표현된 값과 같다.  
+이산 분포를 가정했을 때 $\chi$를 전체 분류의 크기를 담은 첨수 집합이라고 하자. 이제 1이라는 종류만을 담은 참 값은 그림의 오른쪽과 같고, 반면 모델이 예측한 각 분류의 확률은 왼쪽이라고 하자. 이때 크로스 엔트로피는 아래 그림과 같이 계산될 수 있다. S는 $q(x)$, T는 $p(x)$를 나타낸다.
 
 :::{layout="[-1,5,-1]"}
 ![](https://miro.medium.com/v2/resize:fit:882/format:webp/1*rcvGMOuWLMpnNvJ3Oj7fPA.jpeg)
 :::
 
 :::{.column-margin}
-기계학습에서 관련 내용은 [여기](https://www.youtube.com/watch?v=6ArSys5qHAU)를 참고하자. 
+기계학습에서 크로스 엔트로피와 관련된 내용은 [statquest-cross entrophy](https://www.youtube.com/watch?v=6ArSys5qHAU)를 참고하자. 
 :::
 
 ### 로지스틱 함수의 경우 
