--- a/posts/the-lectures/2024-02-13-statquest-rnn.qmd
+++ b/posts/the-lectures/2024-02-13-statquest-rnn.qmd
@@ -72,9 +72,9 @@ RNN의 핵심적인 아이디어는 한번 신경망을 거친 결과가 뒤에 
 
 :::
 
-## 유의할 점 
+## 몇 가지 더 
 
 만일 문장의 토큰(단어)를 투입해야 하는 경우를 생각해보자. 당연히 단어를 그대로 넣을 수 없으니 W2V과 같은 방법을 써서 토큰을 벡터로 바꿔야 한다. 이때 RNN의 역전파 과정에서 이 W2V 네트워크 역시 조정될 수 있다는 점을 기억하자. 
 
-시퀀셜 데이터를 인풋으로 쓰기 때문에 인풋의 길이를 어느 정도는 통제할 수 있다. 예를 들어 10개의 시리즈를 지닌 데이터와 5개의 데이터를 지닌 시리즈가 있다고 하자. 인풋으로 2개를 쓴다면, 이 두 시리즈 모두를 학습에 동원할 수 있다. 
+시퀀셜 데이터를 인풋으로 쓰기 때문에 인풋의 길이를 어느 정도는 통제할 수 있다. 예를 들어 10개의 시리즈를 지닌 데이터와 5개의 데이터를 지닌 시리즈가 있다고 하자. 인풋으로 2개를 쓴다면, 이 두 시리즈 모두를 rnn 학습에 동원할 수 있다. 
 
