--- a/posts/the-lectures/2024-02-14-lstm.qmd
+++ b/posts/the-lectures/2024-02-14-lstm.qmd
@@ -28,6 +28,8 @@ LSTM을 찍먹해보자.
 
 RNN의 가장 큰 문제는 웨이트의 크기에 따라서 효과가 지나치게 증폭되거나 지나치게 줄어드는 데 있다. 웨이트의 크기 자체가 제한된다면 제대로 된 최적화가 어려울 것이다. 경사하강법을 사용할 때 최적 파라미터의 범위가 지나치게 크게 변하거나 지나치게 작게 변하면 원활한 최적화가 어렵다. 이를 극복하기 위해 제안된 네트워크 구조가 LSTM이다. 
 
+이걸 조금 말로 풀어보자. 아래 기본 구조에서 보듯이 시점 혹은 사건의 중요도에 따라서 해당 사건이 예측하려는 사건에 미치는 영향을 정도가 다를 수 있다. 이렇다면 RNN은 하나의 단일한 경로를 통해서 두 가지 정보, 즉 다음 노드에 미치는 영향과 더 멀리 떨어진 노드에 미치는 영향이 단일한 경로를 통해 전달되어 한다. 이 과정에서 정보의 손실이 발생할 수 밖에 없다. LSTM 모델이란 이 경로를 두 개로 분리해준 것이다. 
+
 :::{layout="[-1, 4, -1]"}
 ![RNN의 문제점; KABOOM!!!은 explode, poof!!! vanish를 의미한다.](./images/lstm/01.png){ style="border: 1px solid #000;" }
 :::
@@ -61,6 +63,14 @@ LSTM의 기본 구조는 복잡해보이지만, 아이디어는 단순하다.
 
 ![Tanh 함수](./images/lstm/05.png){ style="border: 1px solid #000;" }
 :::
+
+아래와 같이 표로 정리해보자. 
+
+| 게이트 | 업데이트 정보 | Sigmoid | Tanh |
+| :---: | --- | :---: | :---: |
+| Forget Gate | 장기 기억 | 전기의 단기 기억, 인풋 | - |
+| Input Gate  | 포겟 게이트의 장기 기억 | 전기의 단기 기억, 인풋 | 전기의 단기 기억, 인풋 |
+| Output Gate | 단기 기억 | 단기 기억, 인풋 | 인풋 게이트의 장기 기억 |
 
 ### Forget Gate 
 
