--- a/posts/the-lectures/2024-02-14-lstm.qmd
+++ b/posts/the-lectures/2024-02-14-lstm.qmd
@@ -68,8 +68,8 @@ LSTM의 기본 구조는 복잡해보이지만, 아이디어는 단순하다.
 
 | 게이트 | 업데이트 정보 | Sigmoid | Tanh |
 | :---: | --- | :---: | :---: |
-| Forget Gate | 장기 기억 | 전기의 단기 기억, 인풋 | - |
-| Input Gate  | 포겟 게이트의 장기 기억 | 전기의 단기 기억, 인풋 | 전기의 단기 기억, 인풋 |
+| Forget Gate | 장기 기억 | 단기 기억, 인풋 | - |
+| Input Gate  | 포겟 게이트의 장기 기억 | 단기 기억, 인풋 | 단기 기억, 인풋 |
 | Output Gate | 단기 기억 | 단기 기억, 인풋 | 인풋 게이트의 장기 기억 |
 
 ### Forget Gate 
