--- a/posts/the-lectures/2024-02-13-statquest-rnn.qmd
+++ b/posts/the-lectures/2024-02-13-statquest-rnn.qmd
@@ -26,9 +26,9 @@ RNN 찍먹하자.
 
 ## 기본 구조
 
-RNN은 Recurrent Neural Network의 약자로, 시퀀스 데이터를 처리하는데 사용되는 신경망이다. 시퀀스 데이터란, 데이터의 순서가 중요한 데이터를 말한다. 예를 들어, 문장, 음성, 동영상 등이 있다. RNN은 이러한 시퀀스 데이터를 처리하는데 사용된다.
+RNN은 Recurrent Neural Network의 약자로, 시퀀스 데이터를 처리하는 데 사용되는 신경망이다. 시퀀스 데이터란, 데이터의 순서가 중요한 데이터를 말한다. 예를 들어, 문장, 음성, 동영상 등이 있다. RNN은 이러한 계열, 순서를 지니는 데이터에 활용된다. 
 
-RNN의 핵심적인 아이디어는 한번 신경망을 거친 결과가 뒤에 따라온 데이터와 함께 학습이 다시 활용된다는 것이다. 그림으로 표현하면 아래와 같다. 
+다른 신경망과 구별되는 RNN의 핵심 발상은 한번 신경망을 거친 결과가 뒤에 따라온 데이터와 함께 학습에 다시 활용된다는 것이다. 그림으로 표현한 아래의 내용을 확인하자. 
 
 ::: {layout="[[5, -1, 5]]" layout-valign="bottom"}
 ![피드백 루프로 표현하는 방식](./images/rnn/01.png){ style="border: 1px solid #000;" }
@@ -76,5 +76,5 @@ RNN의 핵심적인 아이디어는 한번 신경망을 거친 결과가 뒤에 
 
 만일 문장의 토큰(단어)를 투입해야 하는 경우를 생각해보자. 당연히 단어를 그대로 넣을 수 없으니 W2V과 같은 방법을 써서 토큰을 벡터로 바꿔야 한다. 이때 RNN의 역전파 과정에서 이 W2V 네트워크 역시 조정될 수 있다는 점을 기억하자. 
 
-시퀀셜 데이터를 인풋으로 쓰기 때문에 인풋의 길이를 어느 정도는 통제할 수 있다. 예를 들어 10개의 시리즈를 지닌 데이터와 5개의 데이터를 지닌 시리즈가 있다고 하자. 인풋으로 2개를 쓴다면, 이 두 시리즈 모두를 rnn 학습에 동원할 수 있다. 
+시퀀셜 데이터를 인풋으로 쓰기 때문에 인풋의 길이를 어느 정도는 통제할 수 있다. 예를 들어 10개의 시리즈를 지닌 데이터와 5개의 데이터를 지닌 시리즈가 있다고 하자. 인풋으로 2개를 쓴다면, 이 두 시리즈 모두를 RNN 학습에 동원할 수 있다. 
 
