--- a/posts/computer-tool/2023-08-27-pixi.qmd
+++ b/posts/computer-tool/2023-08-27-pixi.qmd
@@ -146,7 +146,7 @@ jupyter = "1.0.0"
 
 ## PyPI 패키지 설치 
 
-conda 리포가 대체로 문제가 되지 않지만, `matplotlib`, `stargazer` 등은 현재로서는 PyPI로만 설치할 수 있다. 다행히 0.8 버전부터 PyPI 패키지를 설치할 수 있게 되었다. 
+conda 리포가 대체로 문제가 되지 않지만, `matplotlib`, `stargazer` 등은 현재로서는 PyPI로만 설치할 수 있다. 다행히 0.8 버전부터 PyPI 패키지를 설치할 수 있게 되었다. 방법은 두 가지다. (결국은 같은 방법이긴 하다.) 아래 같이 `toml` 파일을 업데이트하고, `pixi install`을 실행한다. 
 
 ```{.toml filename="pixi.toml"}
 [pypi-dependencies]
@@ -155,6 +155,12 @@ stargazer = "*"
 ```
 
 아직 실험적인 개발 단계라서 버전 지정 방법 등이 conda와 다르다. `*`의 경우 최신 버전을 설치한다.
+
+아니면 터미널 창에서 아래와 같이 실행하자. 이 내용은 `pixi add --help`로도 확인할 수 있다. 
+
+```shell
+$ pixi add --pypi koreanize-matplotlib stargazer
+```
 
 ## VS Code 
 
