--- a/posts/computer-tool/2023-08-27-pixi.qmd
+++ b/posts/computer-tool/2023-08-27-pixi.qmd
@@ -148,6 +148,10 @@ jupyter = "1.0.0"
 
 conda 리포가 대체로 문제가 되지 않지만, `matplotlib`, `stargazer` 등은 현재로서는 PyPI로만 설치할 수 있다. 다행히 0.8 버전부터 PyPI 패키지를 설치할 수 있게 되었다. 방법은 두 가지다. (결국은 같은 방법이긴 하다.) 아래 같이 `toml` 파일을 업데이트하고, `pixi install`을 실행한다. 
 
+:::{.column-margin}
+PyPI 패키지란 파이썬 패키지 인덱스를 의미한다. 파이썬에서 표준적으로 패키지를 설치하는 명령어인 `pip`를 통해 설치되는 패키지를 의미한다. 
+:::
+
 ```{.toml filename="pixi.toml"}
 [pypi-dependencies]
 koreanize-matplotlib = "==0.1.1"
