--- a/posts/the-lectures/2024-02-16-statquest-attention.qmd
+++ b/posts/the-lectures/2024-02-16-statquest-attention.qmd
@@ -27,57 +27,56 @@ format:
 
 ## 넋두리 
 
-비로소 (트랜스포머까지 이르는) '목전'까지 온 느낌이다. Seq2Seq 모델은 이쪽의 정보를 압축해서 저쪽에 보내고 이를 다시 저쪽의 맥락에서 풀어내는 것을 의미한다. 전형적으로 '번역'을 생각하면 되겠다. 강의 역시 영어 "Let's go!"를 스페인어 "Vamos!"로 번역하는 과정을 예시로 들고 있다. 
+LSTM은 단기와 장기의 기억을 나눠서 전달함으로써 RNN이 지는 문제점을 극복하고자 했다. 하지만 여전히 남는 문제가 있었으니, 언어에 따라서 혹은 표현에 따라서 거리가 많이 떨어지는 정보값이 중요해지는 경우가 종종 존재한다. 
 
-## Context Vector
-
-인코딩 파트의 그림을 잘 보자. 몇 가지 요소들을 확인할 수 있다. 
-
-- 맨 아래 워드 임베딩이 포함되어 있음을 알 수 있다. 이는 언어를 숫자로 바꾸는 과정이다. 
-- LSTM은 두 개의 레이어로 이루어져 있고, 각 레이어의 셀(노드)은 2개로 구성되어 있다. 
-
-이렇게 인코딩을 통해 만들어진 정보를 컨텍스트 벡터라고 부른다. 이 녀석을 활용해서 디코더에 초깃값을 부여한다.
-
-::: {layout="[[5, -1, 5]]" layout-valign="bottom"}
-![인코더 만들기](./images/seq2seq/01.png){ style="border: 1px solid #000;" }
-
-![컨텍스트 벡터](./images/seq2seq/02.png){ style="border: 1px solid #000;" }
-:::
-
-## Decoder 
-
-::: {layout="[[5, -1, 5]]" layout-valign="bottom"}
-![인코더와 디코더의 웨이트와 바이어스는 서로 다르다.](./images/seq2seq/03.png){ style="border: 1px solid #000;" }
-
-![디코더의 인풋; 디코딩의 맥락에서 필요한 단어를 임베딩해서 이 녀석을 투입으로 사용한다.](./images/seq2seq/04.png){ style="border: 1px solid #000;" }
-:::
-
-### Word Embedding for Encoder and Decoder
-
-인코딩과 디코딩이라고 생각하면 각각 인코딩에서 인풋을 디코딩에서 아웃풋을 처리하는 이미지를 떠올릴 수 있다. 하지만 '번역'의 맥락에서 인코딩은 인코딩되는 세계의 단어의 정보를 압축하는 것이고 디코딩이란 이 정보에 기반해서 디코딩 세계의 단어의 정보로 풀어내는 것을 의미한다. 따라서 인코딩과 디코딩 각각에 대해서 워드 임베딩이 필요하고, 물론 각각의 웨이트와 바이어스 역시 다르다. 
-
-::: {layout="[[-1, 5, -1]]" layout-valign="bottom"}
-![워드 임베딩](./images/seq2seq/05.png){ style="border: 1px solid #000;" }
-:::
-
-### Word Unembedding? 
-
-디코더의 끝단에에서는 디코딩된 정보를 다시 말로 풀어주는 과정이 필요하다. 이는 워드 ㅇㅁ베딩의 역과정이라고 생각하면 된다. 
-
-::: {layout="[[-1, 5, -1]]" layout-valign="bottom"}
-![디코딩의 벡터를 다시 단어로](./images/seq2seq/06.png){ style="border: 1px solid #000;" }
-:::
-
-
-### `<EOS>` 사용하기
-
-디코딩에서는 `<EOS>`를 먼저 넣는다. 그리고 디코딩 프로세스는 `<EOS>`가 나올 때까지 계속한다. 
+아래의 그림을 보자. 
 
 ::: {layout="[[5, -1, 5, -1, 5]]" layout-valign="bottom"}
-![`<EOS>`에서 시작!](./images/seq2seq/07.png){ style="border: 1px solid #000;" }
+![맨 앞의 토큰이 문장 전체의 의미에 가장 중요하다.](./images/attention/01.png){ style="border: 1px solid #000;" }
 
-![`<EOS>`가 풀려 나올 때까지](./images/seq2seq/08.png){ style="border: 1px solid #000;" }
+![LSTM의 실패](./images/attention/02.png){ style="border: 1px solid #000;" }
 
-![전체 과정](./images/seq2seq/09.png){ style="border: 1px solid #000;" }
+![인코더의 정보를 디코더로 직접 넘겨주면 어떨까?](./images/attention/03.png){ style="border: 1px solid #000;" }
 :::
 
+## 어텐션이란 무엇인가? 
+
+인코더-디코더 모델을 생각해보자. 결국 인코더의 특정 정보와 디코더의 특정 정보가 얼마나 비슷한지가 문제의 핵셤이다. 만일 둘이 비슷하다면 생성에서 이를 더 강하게 반영하는 것이 맞을 것이다. 인코딩에서 강조된 내용이 디코딩에서도 강조되도록 해야 한다. 
+
+핵심은 인코딩과 디코딩 정보의 유사성을 측정하는 데 있다. 측정에는 여러가지 방법이 있을 것인데, 강의에서는 코사인 유사도를 사용한다. 우리는 벡터를 다루고 있고 두 벡터 사이의 비슷한 정도를 측정하는 데에는 코사인 유사도만한 것이 없다. 
+
+### 코사인 유사도 대신 닷 프로덕트 
+
+코사인 유사도의 원래 정의는 다음과 같다. 크기가 같은 벡터 $a_i$, $b_i$가 있다고 하자. 
+
+$$
+\text{Cosine Similarity} = \dfrac{\sum_{i=1}^n a_i b_i}{\sqrt{\sum_{i=1}^n a_i^2} \sqrt{\sum_{i=1}^n b_i^2}}
+$$
+
+식에서 분모는 위의 닷 프로덕트(내적)의 크기를 조절해주는 역할이다. 이 덕분에 코사인 유사도는 그 이름에 걸맞게 $[-1, 1]$ 사이의 값을 지니게 된다. 스케일링이 필요한 이유는 개별 벡터의 값이 닷 프로덕트에서 지니게 되는 값의 효과를 통제하기 위해서다. 그런데 앞에서 보듯이 LSTM의 경우에는 산출되는 벡터의 값이 $[-1,1]$사이를 벗어날 수 없다. 따라서 분모는 무시하고 분자만 다루도록 하자. 
+
+## 어텐션 구현하기 
+
+아래 왼쪽 그림을 보자. 인코더의 첫번째 셀의 벡터와 디코더의 첫번째 셀의 결과의 코사인 유사도를 먼저 후간다. 같은 방식으로 두번째 셀의 벡터와 디코더의 첫번째 셀의 결과의 코사인 유사도를 구한다.
+
+오른쪽 그림처럼 이렇게 구한 코사인 유사도가 일정의 어텐션의 지표가 된다. 
+
+::: {layout="[[5, -1, 5]]" layout-valign="bottom"}
+![어텐션 구현하기 1](./images/attention/04.png){ style="border: 1px solid #000;" }
+![어텐션 구현하기 2](./images/attention/05.png){ style="border: 1px solid #000;" }
+
+이제 이렇게 확보된 어텐션 지표가 디코딩에서 직접 활용된다. 해당 지표를 소프트맥스 처리하고 이를 다시 인코더의 정보와 결합한 뒤 스페인 어로 풀어 놓는다. 여기서 소프트맥스 처리된 코사인 유사도는 인코더의 정보를 어느 정도의 비중으로 반영해야 하는지를 결정한다. 물론 앞서와 마찬가지로 `<EOS>`가 산출될 때까지 이 과정을 반복한다. 
+
+::: {layout="[[5, -1, 5]]" layout-valign="bottom"}
+![어텐션을 반영한 디코딩 워드 생성 1](./images/attention/06.png){ style="border: 1px solid #000;" }
+![어텐션을 반영한 디코딩 워드 생성 1](./images/attention/07.png){ style="border: 1px solid #000;" }
+:::
+
+## Seq2Seq 모델과 비교하기 
+
+아래 그림에서 보듯이 Seq2Seq 모델에 비해서 인코딩의 정보가 디코딩에 직접적으로 영향을 끼치는 것을 알 수 있다. 
+
+::: {layout="[[5, -1, 5]]" layout-valign="bottom"}
+![어텐션을 반영한 인코더-디코더 과정](./images/attention/08.png){ style="border: 1px solid #000;" }
+![seq2seq 인코더-디코더 과정](./images/seq2seq/10.png){ style="border: 1px solid #000;" }
+:::
