--- a/posts/machine-learning/2022-11-29-shannon-entropy.qmd
+++ b/posts/machine-learning/2022-11-29-shannon-entropy.qmd
@@ -38,6 +38,10 @@ $$
 
 $\mathbb E(\cdot)$의 표현이 보여주듯이 $H(X)$는 $\log \frac{1}{p(x)}$의 기댓값이다. 이 녀석을 먼저 들여다보자. $\log \frac{1}{p(x)}$는 확률 변수 $X$에서 $x$에 대응하는 사건이 일어날 확률이 주는 '놀라움'의 크기로 해석할 수 있다. $p(x)=1$인 사건은 놀랍지 않다. 확실히 일어나는 사건이기 때문이다. 반면 일어날 확률이 높지 않은 사건은 놀라운 사건이다. 따라서 이러한 놀라움의 정도는 $\frac{1}{p(x)}$로 측정할 수 있다. 여기에 계산의 편의성을 위해서 $\log$를 취한다. 이렇게 계산된 기댓값이 섀넌의 엔트로피다. 
 
+:::{.column-margin}
+경제학에서 불확실성 하의 선택에서 사용하는 효용함수를 떠올려보자. 위험 기피적인 선호를 지닌 사람의 선호로 흔히 활용하는 것이 $\log(\cdot)$다. 불확실성 하의 선호를 처음 연구했던 사람이 폰 노이만와 모르겐스테른인데, 이들은 섀넌과 비슷한 시기에 활동했던 사람들이다. 모종의 평행이론일까? 
+:::
+
 엔트로피, 즉 무질서의 정도라는 말이 함축하듯이 주어진 확률 변수의 구조가 무작위일수록 엔트로피가 클 것이다. 반면 확률 변수의 구조가 무작위에서 멀어질수록 엔트로피가 줄어든다. (공정한) 동전 던지기와 (공정한) 주사위 던지기를 생각해 보자. 어느 쪽이 엔트로피가 클까? 주사위 던지기 쪽이 크다. 확률이 각각 1/2, 1/6로 같다면 $H$를 결정하는 것은 $\log_{2} {2}$과 $\log_{2} {6}$이 된다. 보다 직관적으로 말해보자. 공정한 동전 던지기는 앞면 아니면 뒷면이다. 공정한 주사위는 6가지 경우의 수가 나온다. 후자의 불확실성, 즉 무질서한 정도가 더 크다. 
 
 ## 정보 엔트로피는 왜 유용할까? 
@@ -76,7 +80,7 @@ $$
 
 위 두 표에서 보듯이, 첫 번째 정보 묶음의 섀넌 엔트로피는 1이다. 두 번째 묶음의 섀넌 엔트로피는 0.875다. 후자가 전자보다 작다. 이는 정보의 분포에 따라서 엔트로피가 가장 무질서한, 즉 가장 클 때보다 효율적인 인코딩 방법이 존재함을 보여준다. 
 
-## 오지랖: Cross Entropy
+## Cross Entropy
 
 크로스 엔트로피 역시 섀넌 엔트로피에서 파생된 개념이다. 크로스 엔트로피는 두 확률 분포의 차이를 측정하는 지표이다. 크로스 엔트로피는 다음과 같이 정의된다.
 
@@ -84,9 +88,13 @@ $$
 H(p,q)=-\sum_{x \in \chi} p(x) \log q(x) 
 $$
 
-섀넌 엔트로피의 개념에 평가 값에 예측 확률을 넣었다고 보면 된다. 즉, 실제로 존재하는 확률이 $p(x)$라고 할 때 이를 예측한 값이 $q(x)$라고 하면, 위의 값은 실제 확률과 비교한 예측 확률의 성과를 나타난다. $q(x) = p(x)$일 때 $H(p,q)$는 최솟값을 지니게 된다.
+섀넌 엔트로피의 개념에서 확률의 효용을 측정하는 값으로 예측 확률을 사용한다고 보면 되겠다. 즉, 실제로 존재하는 확률이 $p(x)$라고 할 때 이를 예측한 값이 $q(x)$라고 하면, 위의 값은 실제 확률과 비교한 예측 확률의 성과를 나타난다. $q(x) = p(x)$일 때 $H(p,q)$는 최솟값을 지니게 된다.
 
 크로스 엔트로피는 분류 문제를 풀 때 손실 함수로 많이 활용된다. 왜 그럴까? 흔히 활용되는 오차제곱항에 비해서 올바른 확률에서 멀리 떨어져 있을 때 기울기의 값이 훨씬 크다. 경사하강법을 쓰면 훨씬 빠르게 원하는 위치로 접근한다. 
+
+:::{layoyt="[-1,5,-1]" valign="bottom"}
+![참 값이 1일 때 $\log\frac{1}{p(x)}$의 그래프; 그림에서 보듯이 파라미터의 값이 참 값에서 멀수록 기울기가 가파르다. 기계 학습에서 오차제곱항보다 크로스엔트로피를 많이 사용하는 이유는 이 때문이다.](https://ml-cheatsheet.readthedocs.io/en/latest/_images/cross_entropy.png)
+:::
 
 이산 분포를 가정했을 때 $\chi$를 전체 분류의 크기를 담은 첨수 집합이라고 하자. 이제 1이라는 종류만을 담은 참 값은 그림의 오른쪽과 같고, 반면 모델이 예측한 각 분류의 확률은 왼쪽이라고 하자. 이때 크로스 엔트로피는 아래 그림과 같이 계산될 수 있다. S는 $q(x)$, T는 $p(x)$를 나타낸다.
 
