--- a/posts/the-lectures/2024-02-13-statquest-rnn.qmd
+++ b/posts/the-lectures/2024-02-13-statquest-rnn.qmd
@@ -3,7 +3,7 @@ title: "Recurrent Neural Network"
 description: RNN에 대해서 알아보자.
 author: "JS HUHH"
 date: "02/14/2024"
-image: "./images/cat-learning-2.webp"
+image: "./images/cat-network.webp"
 categories: [the-lectures, machine-learning]
 #fig-align: center
 filters:
