--- a/posts/machine-learning/2022-11-29-shannon-entropy.qmd
+++ b/posts/machine-learning/2022-11-29-shannon-entropy.qmd
@@ -32,9 +32,10 @@ lightbox: auto
 약간을 사설을 늘어놓자면, 확률 변수는 사건으로 존재하는 실험 집합(sample space)을 실수 공간으로 옮겨 두는 함수다. 이렇게 옮겨진 실숫값은 확률 분포를 지니게 되고 이를 통해 여러 가지 계산을 도모할 수 있다. 
 :::
 
-$$
-H(X)=-\sum_{x \in \chi} p(x) \log p(x) = \mathbb E [-\log p(x)]
-$$
+\begin{align*}
+H(X) &=  \sum_{x \in \chi} p(x) \log \dfrac{1}{p(x)} = -\sum_{x \in \chi} p(x) \log p(x) \\ 
+     & = \mathbb E [\dfrac{1}{\log p(x)}] = - \mathbb E [\log p(x)]\\
+\end{align*}
 
 $\mathbb E(\cdot)$의 표현이 보여주듯이 $H(X)$는 $\log \frac{1}{p(x)}$의 기댓값이다. 이 녀석을 먼저 들여다보자. $\log \frac{1}{p(x)}$는 확률 변수 $X$에서 $x$에 대응하는 사건이 일어날 확률이 주는 '놀라움'의 크기로 해석할 수 있다. $p(x)=1$인 사건은 놀랍지 않다. 확실히 일어나는 사건이기 때문이다. 반면 일어날 확률이 높지 않은 사건은 놀라운 사건이다. 따라서 이러한 놀라움의 정도는 $\frac{1}{p(x)}$로 측정할 수 있다. 여기에 계산의 편의성을 위해서 $\log$를 취한다. 이렇게 계산된 기댓값이 섀넌의 엔트로피다. 
 
@@ -92,7 +93,7 @@ $$
 
 크로스 엔트로피는 분류 문제를 풀 때 손실 함수로 많이 활용된다. 왜 그럴까? 흔히 활용되는 오차제곱항에 비해서 올바른 확률에서 멀리 떨어져 있을 때 기울기의 값이 훨씬 크다. 경사하강법을 쓰면 훨씬 빠르게 원하는 위치로 접근한다. 
 
-:::{layoyt="[-1,5,-1]" valign="bottom"}
+:::{layoyt="[-1,4,-1]" valign="bottom"}
 ![참 값이 1일 때 $\log\frac{1}{p(x)}$의 그래프; 그림에서 보듯이 파라미터의 값이 참 값에서 멀수록 기울기가 가파르다. 기계 학습에서 오차제곱항보다 크로스엔트로피를 많이 사용하는 이유는 이 때문이다.](https://ml-cheatsheet.readthedocs.io/en/latest/_images/cross_entropy.png)
 :::
 
