--- a/posts/machine-learning/2022-11-29-shannon-entropy.qmd
+++ b/posts/machine-learning/2022-11-29-shannon-entropy.qmd
@@ -94,7 +94,7 @@ $$
 크로스 엔트로피는 분류 문제를 풀 때 손실 함수로 많이 활용된다. 왜 그럴까? 흔히 활용되는 오차제곱항에 비해서 올바른 확률에서 멀리 떨어져 있을 때 기울기의 값이 훨씬 크다. 경사하강법을 쓰면 훨씬 빠르게 원하는 위치로 접근한다. 
 
 :::{layoyt="[-1,4,-1]" valign="bottom"}
-![참 값이 1일 때 $\log\frac{1}{p(x)}$의 그래프; 그림에서 보듯이 파라미터의 값이 참 값에서 멀수록 기울기가 가파르다. 기계 학습에서 오차제곱항보다 크로스엔트로피를 많이 사용하는 이유는 이 때문이다.](https://ml-cheatsheet.readthedocs.io/en/latest/_images/cross_entropy.png)
+![참 값이 1일 때 $\log\frac{1}{p(x)}$의 그래프; 그림에서 보듯이 파라미터의 값이 참 값에서 멀수록 기울기가 가파르다. 기계 학습에서 오차제곱항보다 크로스엔트로피를 많이 사용하는 이유는 이 때문이다.](./images/grad_entrophy.png)
 :::
 
 이산 분포를 가정했을 때 $\chi$를 전체 분류의 크기를 담은 첨수 집합이라고 하자. 이제 1이라는 종류만을 담은 참 값은 그림의 오른쪽과 같고, 반면 모델이 예측한 각 분류의 확률은 왼쪽이라고 하자. 이때 크로스 엔트로피는 아래 그림과 같이 계산될 수 있다. S는 $q(x)$, T는 $p(x)$를 나타낸다.
