--- a/posts/machine-learning/2022-11-29-shannon-entropy.qmd
+++ b/posts/machine-learning/2022-11-29-shannon-entropy.qmd
@@ -91,10 +91,14 @@ $$
 
 섀넌 엔트로피의 개념에서 확률의 효용을 측정하는 값으로 예측 확률을 사용한다고 보면 되겠다. 즉, 실제로 존재하는 확률이 $p(x)$라고 할 때 이를 예측한 값이 $q(x)$라고 하면, 위의 값은 실제 확률과 비교한 예측 확률의 성과를 나타난다. $q(x) = p(x)$일 때 $H(p,q)$는 최솟값을 지니게 된다.
 
-크로스 엔트로피는 분류 문제를 풀 때 손실 함수로 많이 활용된다. 왜 그럴까? 흔히 활용되는 오차제곱항에 비해서 올바른 확률에서 멀리 떨어져 있을 때 기울기의 값이 훨씬 크다. 경사하강법을 쓰면 훨씬 빠르게 원하는 위치로 접근한다. 
+크로스 엔트로피는 분류 문제를 풀 때 손실 함수로 많이 활용된다. 왜 그럴까? 이것이 이른바 그래이언트 소실(vanishing gradient) 문제이다. 흔히 손실 함수로 활용되는 오차제곱항에 비해서 크로스 엔트로피 손실 함수는 올바른 확률에서 멀리 떨어져 있을 때 기울기의 값이 훨씬 크다. 이는 값이 $[0,1]$에 다 위치하고 있기 때문이다. 경사 하강법을 쓸 때 크로스 엔트로피 오차 함수일 때 훨씬 빠르게 원하는 위치로 접근한다. 
 
-:::{layout="[-1,3,-1]"}
-![참 값이 1일 때 $\log\frac{1}{p(x)}$의 그래프; 그림에서 보듯이 파라미터의 값이 참 값에서 멀수록 기울기가 가파르다. 기계 학습에서 오차제곱항보다 크로스엔트로피를 많이 사용하는 이유는 이 때문이다.](./images/grad_entrophy.png)
+:::{layout="[[4,-1, 4]]"}
+![](./images/grad_entrophy.png)
+
+![](./images/grad_entrophy-2.png)
+
+오차 함수로 크로스 엔트로피를 사용할 때의 그래디언트와 오차 함수로 평균 제곱 오차를 사용할 때의 그래디언트를 비교해보자. 왼쪽은 참 값이 1이고, 오른쪽은 참 값이 0이라고 가정했을 때의 그래디언트를 나타낸다.
 :::
 
 이산 분포를 가정했을 때 $\chi$를 전체 분류의 크기를 담은 첨수 집합이라고 하자. 이제 1이라는 종류만을 담은 참 값은 그림의 오른쪽과 같고, 반면 모델이 예측한 각 분류의 확률은 왼쪽이라고 하자. 이때 크로스 엔트로피는 아래 그림과 같이 계산될 수 있다. S는 $q(x)$, T는 $p(x)$를 나타낸다.
