--- a/posts/the-lectures/2024-02-14-lstm.qmd
+++ b/posts/the-lectures/2024-02-14-lstm.qmd
@@ -6,6 +6,7 @@ date: "02/14/2024"
 image: "./images/cat-network.webp"
 categories: [the-lectures, machine-learning]
 #fig-align: center
+fig-cap-location: bottom
 filters:
    - lightbox
    #- line-highlight
@@ -39,7 +40,7 @@ RNN의 가장 큰 문제는 웨이트의 크기에 따라서 효과가 지나치
 LSTM의 기본 구조는 복잡해보이지만, 아이디어는 단순하다. 
 
 ::: {layout="[[5, -1, 5, -1, 5]]" layout-valign="bottom"}
-![LSTM의 아이디어; 장기와 단기의 기억을 분리해서 각각을 업데이트한다.](./images/lstm/02.png){ style="border: 1px solid #000;" }
+![LSTM의 아이디어](./images/lstm/02.png){ style="border: 1px solid #000;" }
 
 ![LSTM의 기본 구조](./images/lstm/03.png){ style="border: 1px solid #000;" }
 
