--- a/posts/stats-simple/2024-02-28-p-value.qmd
+++ b/posts/stats-simple/2024-02-28-p-value.qmd
@@ -31,9 +31,7 @@ $$
 P(A|B) \neq P(B|A)
 $$
 
-이다. $P(\text{E}|H_0)$을 생각해보자. $H_0$이 영가설(null hypothesis)이다. E는 증거를 나타난다. 즉, 관측값이다. 
-
-우리가 아는 p값이란 영가설이 맞다고 가정할 때 E라는 증거거를 관측할 확률이다. 이는 당연히 $P(H_0|\text{E})$와는 다르다. 
+이다. $P(\text{E}|H_0)$을 생각해보자. $H_0$이 영가설(null hypothesis)이다. E는 증거를 나타난다. 즉, 관측값이다. 우리가 아는 p값이란 영가설이 맞다고 가정할 때 E라는 증거거를 관측할 확률이다. 이는 당연히 $P(H_0|\text{E})$와는 다르다. 
 
 "P의 비극"은 이 둘을 혼동하는 데에서 시작한다. 
 
