--- a/posts/stats-simple/2024-02-28-p-value.qmd
+++ b/posts/stats-simple/2024-02-28-p-value.qmd
@@ -151,9 +151,9 @@ Positive라고 보고한 결과, 즉 $H_0$을 reject한 연구 중에서 오직 
 
 ### p값은 줄일수록 좋은가? 
 
-만일 $P(E|\neg H_0)$의 값이 고정되어 있다면, p값, 즉 $P(E|\neg H_0)$값이 낮을수록 $P(H_0|\text{E})$ 역시 작아질 것이다. 하지만 위에서 보듯이 영가설과 대립가설의 분포가 겹쳐 있는 상황에서 p값이 작다는 것 즉, 1종 오류를 줄인다는 것은 2종 오류를 늘이게 된다. 
+만일 $P(E|\neg H_0)$의 값이 고정되어 있다면, p값, 즉 $P(E|\neg H_0)$값이 낮을수록 $P(H_0|\text{E})$ 역시 작아질 것이다. 하지만 위에서 보듯이 영가설과 대립가설의 분포가 겹쳐 있는 상황에서 p값이 작다는 것 즉, 1종 오류를 아주 작게 줄인다는 것은 대개의 경우 2종 오류를 늘이게 된다. 만일 2종 오류가 많이 늘지 않는 경우라면 당연히 1종 오류를 줄이는 것이 도움이 된다. 
 
 
-## 그래서, 뭐 어짜라고 
+## 그래서, 뭐 어쩌라고?
 
 통계학은 그 단어와 학문이 품은 '모호함' 만큼 조심스럽게 해석하고 접근해야 한다. 세상의 모든 일이 그렇지만 언제나 '맥락'이 중요하다. 오늘의 교훈이다. p값 역시 그러한 맥락을 잊지 말자. 
