--- a/posts/stats-simple/2024-02-28-p-value.qmd
+++ b/posts/stats-simple/2024-02-28-p-value.qmd
@@ -48,7 +48,7 @@ $$
 이 사례는 [여기](https://outsidetheasylum.blog/an-actually-intuitive-explanation-of-p-values/)에서 가져왔다. 보다 익살스런 사례로 [xkcd 882: Significant](https://www.explainxkcd.com/wiki/index.php/882:_Significant)도 참고하자. 
 :::
 
-D&D라는 게임은 다각 20면을 지닌 주사위를 쓴다. 만일 "녹색 모자를 쓰고 주사위를 던질 때 20이 더 잘나온다"는 대립 가설을 세웠다고 하자. 이때 영가설은 "녹색 모자를 쓰는 것은 주사위의 결과에 영향을 미치지 않는다"가 될 것이다. 그리고 녹색 모자를 쓴 채 주사위를 던져서 20을 얻었다. 이때 p값은 어떻게 될까? 0.05이다. 
+D&D라는 게임은 다각 20면을 지닌 주사위를 쓴다. 만일 "녹색 모자를 쓰고 주사위를 던질 때 20이 더 잘나온다"는 대립가설(alternative hypothesis)을 세웠다고 하자. 이때 영가설은 "녹색 모자를 쓰는 것은 주사위의 결과에 영향을 미치지 않는다"가 될 것이다. 그리고 녹색 모자를 쓴 채 주사위를 던져서 20을 얻었다. 이때 p값은 어떻게 될까? 0.05이다. 
 
 $$
 P(\text{E}|H_0) = \dfrac{1}{20} = 0.05
