--- a/posts/stats-simple/2024-02-28-p-value.qmd
+++ b/posts/stats-simple/2024-02-28-p-value.qmd
@@ -54,7 +54,7 @@ $$
 P(\text{E}|H_0) = \dfrac{1}{20} = 0.05
 $$
 
-(약간 에누리를 더해서) 10% 유의 수준에서 해당 영가설을 넉넉하게 기각할 수 있다! 따라서 "녹색 모자를 쓰고 주사위를 던질 때 20이 더 잘 나온다!" 이 말은 맞나? 당연히 이상한 말이다. 수많은 D&D 플레이어들은 이 말이 틀리다는 사실을 경험적으로 너무나(!) 잘 알고 있을 것이다. 
+(약간 에누리를 더해서) 10% 유의 수준에서 해당 영가설을 넉넉하게 기각할 수 있다! 따라서 "녹색 모자를 쓰고 주사위를 던질 때 20이 더 잘 나온다!" 이 말은 맞나? 당연히 이상한 말이다. 수많은 D&D 플레이어들은 이 말이 틀리다는 것을 경험적으로 너무나(!) 잘 알고 있다. 
 
 ### 베이즈 정리 
 
