--- a/posts/stats-simple/2024-02-28-p-value.qmd
+++ b/posts/stats-simple/2024-02-28-p-value.qmd
@@ -74,7 +74,7 @@ $$
 
 20이라는 주사위의 관찰이 영가설의 신뢰성을 약간 훼손시키긴 했지만 그 정도가 심하지는 않다. 이게 대체로 상식적인 결과일 것이다. 
 
-p값은 중요하다. 하지만 p값을 강한 의미로 해석하려면, 즉 영가설이 어느 정도나 옳은지의 맥락에서 해석하라면 베이즈 정리의 눈, 즉 사전 지식 혹은 믿음의 맥락에 입각해 살펴봐야 한다. 
+p값은 중요하다! 하지만 p값을 강한 의미로 해석하려면, 즉 영가설이 어느 정도나 옳은지의 맥락에서 해석하려면 베이즈 정리의 눈, 즉 사전 지식 혹은 믿음의 맥락에 입각해 한번 더 생각해봐야 할 것이다. 
 
 ## p값은 검정의 '성과 지표'가 아니다! 
 
