--- a/posts/stats-simple/2024-02-28-p-value.qmd
+++ b/posts/stats-simple/2024-02-28-p-value.qmd
@@ -58,9 +58,9 @@ $$
 
 ### 베이즈 정리 
 
-우리가 알고 싶은 것이 p값과는 다른 조건부 확률, 즉 $P(H_0 | \text{E})$라고 하자. 사실 우리가 영가설을 기각하는 쾌감의 이면에는 대립가설이 맞다는 주장이 들어서 있다. 
+사실 우리가 알고 싶은 것이 p값이 아닐지 모른다. 우리는 이 값과는 다른 조건부 확률, 즉 $P(H_0 | \text{E})$을 알고 싶은 것이다! 영가설을 기각할 때 찾아오는 쾌감을 기억하는가? 이 쾌감이 근거를 지니려면 $P(\cdot)$의 값이 충분히 커야 할 것이다! 
 
-이 문제는 어떻게 접근할 수 있을까? 베이즈 정리를 활용할 수 있다. 
+이 문제를 다루는 데에는 베이즈 정리를 활용할 수 있다. 
 
 $$
 P(H_0|\text{E}) = \dfrac{P(\text{E}|H_0)P(H_0)}{P(\text{E}|H_0)P(H_0) + P(\text{E}|\neg H_0)P(\neg H_0)}
