--- a/posts/stats-simple/2024-02-28-p-value.qmd
+++ b/posts/stats-simple/2024-02-28-p-value.qmd
@@ -58,7 +58,7 @@ $$
 
 ### 베이즈 정리 
 
-사실 우리가 알고 싶은 것이 p값이 아닐지 모른다. 우리는 이 값과는 다른 조건부 확률, 즉 $P(H_0 | \text{E})$을 알고 싶은 것이다! 영가설을 기각할 때 찾아오는 쾌감을 기억하는가? 이 쾌감이 근거를 지니려면 $P(\cdot)$의 값이 충분히 커야 할 것이다! 
+사실 우리가 알고 싶은 것이 p값이 아닐지 모른다. 우리는 이 값과는 다른 조건부 확률, 즉 $P(H_0 | \text{E})$을 알고 싶은 것이다! 영가설을 기각할 때 찾아오는 쾌감을 기억하는가? 이 쾌감이 근거를 지니려면 $P(\cdot)$의 값이 충분히 작아야 한다! 
 
 이 문제를 다루는 데에는 베이즈 정리를 활용할 수 있다. 
 
