--- a/posts/stats-simple/2024-02-28-p-value.qmd
+++ b/posts/stats-simple/2024-02-28-p-value.qmd
@@ -152,9 +152,9 @@ $$
 
 Positive라고 보고한 결과, 즉 $H_0$을 reject한 연구 중에서 오직 40%($\frac{60}{90+60}$)만 타당한 결과다. 나머지 60%는 false positive에 속한다! 
 
-### p값은 줄일수록 좋은가? 
+### p값은 낮을수록 좋은가? 
 
-만일 $P(E|\neg H_0)$의 값이 고정되어 있다면, p값, 즉 $P(E|\neg H_0)$값이 낮을수록 $P(H_0|\text{E})$ 역시 작아질 것이다. 하지만 위에서 보듯이 영가설과 대립가설의 분포가 겹쳐 있는 상황에서 p값이 작다는 것 즉, 1종 오류를 아주 작게 줄인다는 것은 대개의 경우 2종 오류를 늘이게 된다. 만일 2종 오류가 많이 늘지 않는 경우라면 당연히 1종 오류를 줄이는 것이 도움이 된다. 
+만일 $P(\text{E}|\neg H_0)$ 혹은 $(1-\beta)$의 값이 고정되어 있다면, p값, 즉 $\alpha$ 혹은 $P(\text{E}|H_0)$값이 낮을수록 $P(H_0|\text{E})$ 역시 작아질 것이다. 하지만 위에서 보듯이 영가설과 대립가설의 분포가 겹쳐 있는 상황에서 p값이 작다는 것 즉, 1종 오류를 아주 작게 줄인다는 것은 대개의 경우 2종 오류를 늘이게 된다. 즉, $(1-\beta)$는 작아지고 우리가 마음 속으로 바라고 있는 값, E라는 증거가 발견되었는데도 영가설 $H_0$가 맞을 확률은 높아진다. 이 때 $\alpha$와 $\beta$ 중에서 어떤 것이 $P(H_0|\text{E})$ 변화에 더 큰 영향을 줄것인지는 따져봐야 알 수 있다. 
 
 
 ## 그래서, 뭐 어쩌라고?
