--- a/posts/computer-tool/2022-05-14-blogging-with-quarto.qmd
+++ b/posts/computer-tool/2022-05-14-blogging-with-quarto.qmd
@@ -4,7 +4,7 @@ description: Quarto로 블로그를
 author: "JS HUHH"
 date: "05/14/2022"
 image: "images/cat-blog.webp"
-categories: [computer-tool, document-tool]
+categories: [computer-tool, document-tool, quarto]
 
 ---
 
