--- a/posts/computer-tool/2024-03-18-lazy-dashboard.qmd
+++ b/posts/computer-tool/2024-03-18-lazy-dashboard.qmd
@@ -4,7 +4,7 @@ description: "소박하고 개인적인"
 author: "JS HUHH"
 date: "03/18/2024"
 image: "./images/cat-sketch.webp"
-categories: [computer-tool, quarto]
+categories: [computer-tool, document-tool, quarto]
 lightbox: auto
 #fig-align: center
 filters:
