--- a/posts/computer-tool/2022-07-07-pt-with-quarto.qmd
+++ b/posts/computer-tool/2022-07-07-pt-with-quarto.qmd
@@ -4,7 +4,7 @@ description: Quarto로 편하게!
 author: "JS HUHH"
 date: "07/07/2022"
 image: "images/revealjs.jfif"
-categories: [computer-tool, document-tool]
+categories: [computer-tool, document-tool, quarto]
 draft: false
 format:
   html:
