--- a/posts/computer-tool/2024-03-18-lazy-dashboard.qmd
+++ b/posts/computer-tool/2024-03-18-lazy-dashboard.qmd
@@ -48,7 +48,7 @@ Quarto Dashboard를 활용해서 개인용 보드를 만들어 보자.
 
 ### 최소한의 암호화 
 
-정적 웹이라는 것은 기본적으로 html 문서로 구성된다. 로그인 시스템은 해당 문서의 열람 앞에 존재할 것이기 때문에 사실 인증 시스템의 부재를 이 맥락에서 따지는 것이 적당하지 않다. 그럼에도 아쉽다. 깃허브 기준으로 private repo에서 pages를 만들면 전체 공개로 외부에 제공된다. credentials와 같은 민감한 정보는 리포를 private로 만들어 감출 수 있다. 대시 보드 자체에 올라가는 정보가 민감한 정보라면 어떻게 해야 할까? 최소한 페이지에 암호라도 있었으면 싶을 것이다. 이메일로 전달되는 각종 고지서에 적용된 암호화 정도면 충분하겠다. 
+정적 웹이라는 것은 기본적으로 html 문서로 구성된다. 인증은 해당 문서의 열람 앞에 존재할 것이기 때문에 사실 그 부재를 아쉬워하는 것이 적절하지는 않다. 그럼에도 아쉽다! 깃허브 기준으로 private repo에서 pages를 만들면 전체 공개로 외부에 제공된다. credentials와 같은 민감한 정보는 리포를 private로 만들어 감출 수 있다. 대시 보드 자체에 올라가는 정보가 민감한 정보라면 어떻게 해야 할까? 최소한 페이지에 암호라도 있었으면 싶을 것이다. 이메일로 전달되는 각종 고지서에 적용된 암호화 정도면 충분하겠다. 
 
 [Staticrypt](https://github.com/robinmoisson/staticrypt){target="_blank"}이라는 도구를 쓰면 html 문서에 암호를 걸 수 있다. 해당 페이지를 깃허브 페이지스로 서브하면 암호를 먼저 입력해야 내용을 볼 수 있다. 이것이 제대로 된 로그인 시스템이라고 할 수는 없지만, 개인적인 용도의 안전 장치 정도로는 충분하다.
 
